# swc

./: .gitignore  Cargo.toml  Dockerfile  docker-compose.yml
.github/workflows/: main_flow.yml
docker/: Dockerfile
src/: filter.rs  lib.rs  main.rs  routes.rs  state.rs
src/route/: balance.rs  expense.rs  group.rs  mod.rs
src/service/: balance.rs  expense.rs  group.rs  mod.rs  user.rs
tests/: filter_it.rs  integration_test.rs
tests/http/: users.http
tests/resources/: expenses.json
tests/route/: expense_it.rs  group_it.rs
tests/service/: balance_it.rs  expense_it.rs
tests/service/aggregate/: user_expense_aggregate_it.rs
