[package]
name = "swc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15"
tide = "0.15.0"
anyhow = "1.0.57"
serde = { version = "1.0.116", features = ["derive"] }
tokio = { version = "1.3.0", features = ["rt-multi-thread", "macros"] }
