[package]
name = "swc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
async-trait = "0.1.38"
chrono = "0.4"
dotenv = "0.15"
mongodb = "2.1.0"
serde = { version = "1.0.116", features = ["derive"] }
tokio = { version = "1.3.0", features = ["rt-multi-thread", "macros"] }
tokio-stream = "0.1.8"
tide = "0.17.0-beta.1"
pretty_env_logger = "0.4"

[dev-dependencies]
futures = "0.3.21"
testcontainers = "0.14.0"
