[package]
name = "swc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
async-trait = "0.1.38"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
futures = "0.3.15"
log = "0.4.17"
mongodb = "2.1.0"
pretty_env_logger = "0.4"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.57"
tokio = { version = "1.3.0", features = ["rt-multi-thread", "macros"] }
tokio-stream = "0.1.8"
warp = "0.3.3"

[dev-dependencies]
futures = "0.3.21"
testcontainers = "0.14.0"
